<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="388dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_title"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/movie_year"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/imdbIDTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/imdb_id"
        android:textAlignment="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/typeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        android:textAlignment="center"
        android:textSize="22sp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="16dp"/>
</LinearLayout>
