<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="8dp">

    <!-- Movie Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <!-- Movie Year -->
    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <!-- Movie Poster Image -->
    <ImageView
        android:id="@+id/poster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:contentDescription="@string/movie_poster"
        android:scaleType="centerCrop"
        android:layout_marginBottom="8dp"
        tools:ignore="HardcodedText" />

</LinearLayout>
